; ModuleID = '/home/carl/AnghaBench/lede/package/boot/uboot-oxnas/src/drivers/block/extr_plxsata_ide.c_wait_no_error.c'
source_filename = "/home/carl/AnghaBench/lede/package/boot/uboot-oxnas/src/drivers/block/extr_plxsata_ide.c_wait_no_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sata_regs_base = common dso_local global i32** null, align 8
@SATA_INT_STATUS_OFF = common dso_local global i32 0, align 4
@SATA_INT_STATUS_ERROR_BIT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"wait_no_error() SATA core flagged error\0A\00", align 1
@MAX_NO_ERROR_LOOPS = common dso_local global i32 0, align 4
@ATA_PORT_COMMAND = common dso_local global i32 0, align 4
@ATA_STATUS_ERR_BIT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [63 x i8] c"wait_no_error() Timed out of wait for SATA no-error condition\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @wait_no_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wait_no_error(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %5 = load i32**, i32*** @sata_regs_base, align 8
  %6 = load i32, i32* %2, align 4
  %7 = sext i32 %6 to i64
  %8 = getelementptr inbounds i32*, i32** %5, i64 %7
  %9 = load i32*, i32** %8, align 8
  %10 = load i32, i32* @SATA_INT_STATUS_OFF, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @SATA_INT_STATUS_ERROR_BIT, align 4
  %15 = shl i32 1, %14
  %16 = and i32 %13, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %1
  %19 = call i32 @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  br label %43

20:                                               ; preds = %1
  %21 = load i32, i32* @MAX_NO_ERROR_LOOPS, align 4
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %33, %20
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* @ATA_PORT_COMMAND, align 4
  %25 = call i32 @ide_inb(i32 %23, i32 %24)
  %26 = load i32, i32* @ATA_STATUS_ERR_BIT, align 4
  %27 = shl i32 1, %26
  %28 = and i32 %25, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %31, label %30

30:                                               ; preds = %22
  store i32 1, i32* %3, align 4
  br label %37

31:                                               ; preds = %22
  %32 = call i32 @udelay(i32 10)
  br label %33

33:                                               ; preds = %31
  %34 = load i32, i32* %4, align 4
  %35 = add nsw i32 %34, -1
  store i32 %35, i32* %4, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %22, label %37

37:                                               ; preds = %33, %30
  %38 = load i32, i32* %4, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %42, label %40

40:                                               ; preds = %37
  %41 = call i32 @printf(i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.1, i64 0, i64 0))
  br label %42

42:                                               ; preds = %40, %37
  br label %43

43:                                               ; preds = %42, %18
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @ide_inb(i32, i32) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
